# telegram-mailing-helper

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  entrypoint.sh  pyproject.toml  test_config.json  update.sh
telegram_mailing_help/: __init__.py  appConfig.py  main.py  telegramMailingHelper.py
telegram_mailing_help/db/: dao.py  migration.py  utils.py
telegram_mailing_help/db/migration/: 0004.normalize_db.py  0011.new_setting_label_for_description_button.py  0012.add_show_count_of_taken_blocks_filed_in_dispatch_list_group.py  0013.add_show_group_only_for_filed_in_dispatch_list_group.py  0014.add_pwa_auth_fields_to_users.py  0015.add_push_subscriptions_table.py  0016.add_vapid_and_jwt_to_storage.py  0017.add_telegram_link_tokens_table.py
telegram_mailing_help/logic/: listPreparation.py
telegram_mailing_help/pwa/: auth.py  config.py  deps.py  push.py  router_auth.py  router_push.py  router_user.py  server.py
telegram_mailing_help/pwa/static/: app.js  index.html  manifest.json  sw.js
telegram_mailing_help/telegram/: bot.py
telegram_mailing_help/web/: config.py  server.py
telegram_mailing_help/web/templates/: app.js  chikagojs.js  dispatch_group_info.tpl  dispatch_lists.tpl  header.tpl  index.html  nicepage.js  reports.tpl
template_for_service/: telegram-mailing-helper.service
tests/: test_admin_page.py  test_dao.py  test_list_preparation.py  test_migration.py
tests/e2e/: conftest.py  test_api.py  test_multi_bot.py  test_tg_api_calls.py  test_web_pages.py  test_webhook.py  tg_mock.py
